--- a/templates/add-data.html
+++ b/templates/add-data.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="/static/css/style.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Add Dormitory Data</title>
 </head>
 
@@ -47,6 +49,8 @@
                 <input type="number" class="form-control" id="numberOfRoomsAvailable" name="numberOfRoomsAvailable">
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="button" class="btn btn-secondary" id="cancelBtn"><i
+                    class="bi bi-x-circle"></i>&nbsp;Cancel</button>
         </form>
     </div>
     <br>
@@ -60,6 +64,10 @@
     </footer>
 
     <script>
+        document.getElementById("cancelBtn").addEventListener("click", function () {
+            // Redirect to the previous page or specific page
+            window.location.href = "{{ url_for('index') }}"; // Change 'index' to the appropriate endpoint
+        });
         document.getElementById("addDataForm").addEventListener("submit", function (event) {
             event.preventDefault(); // Prevent default form submission
 
@@ -94,15 +102,15 @@
                 },
                 body: JSON.stringify(jsonData)
             })
-            .then(response => response.json())
-            .then(data => {
-                console.log(data);
-                alert(data.message);
-                document.getElementById("addDataForm").reset();
-            })
-            .catch(error => {
-                console.error('Error:', error);
-            });
+                .then(response => response.json())
+                .then(data => {
+                    console.log(data);
+                    alert(data.message);
+                    document.getElementById("addDataForm").reset();
+                })
+                .catch(error => {
+                    console.error('Error:', error);
+                });
         });
     </script>
 
