--- a/templates/update_form.html
+++ b/templates/update_form.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="/static/css/style.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 
@@ -50,58 +50,67 @@
             </div>
             <div class="form-group">
                 <h4 for="numberOfRoomsAvailable">Rooms :</h4>
-                <input type="text" class="form-control" id="numberOfRoomsAvailable" name="numberOfRoomsAvailable" value="{{ item.numberOfRoomsAvailable }}">
+                <input type="text" class="form-control" id="numberOfRoomsAvailable" name="numberOfRoomsAvailable"
+                    value="{{ item.numberOfRoomsAvailable }}">
             </div>
 
             <br>
             <button type="submit" class="btn btn-primary"><i class="bi bi-house-gear"></i>&nbsp;Update</button>
             <button type="button" class="btn btn-danger" id="deleteBtn"><i class="bi bi-trash"></i>&nbsp;Delete</button>
+            <button type="button" class="btn btn-secondary" id="cancelBtn"><i
+                    class="bi bi-x-circle"></i>&nbsp;Cancel</button>
         </form>
     </div>
-ิิ<br><br><br>
+    ิิ<br><br><br>
 
-<br>
-<i class="bi bi-arrow-up-circle-fill" id="goToTopBtn" onclick="goToTop()"></i>
-  <footer class="footer mt-auto py-2 text-white">
-    <div class="container text-center">
-      <span class="text">All content © 2024 The Microservice, ECT-R21</span><br>
-      <span class="text">Dormitory Website, Max Mongkol Thailand 4, 20000 Dubrovnik</span>
-    </div>
-  </footer>
+    <br>
+    <i class="bi bi-arrow-up-circle-fill" id="goToTopBtn" onclick="goToTop()"></i>
+    <footer class="footer mt-auto py-2 text-white">
+        <div class="container text-center">
+            <span class="text">All content © 2024 The Microservice, ECT-R21</span><br>
+            <span class="text">Dormitory Website, Max Mongkol Thailand 4, 20000 Dubrovnik</span>
+        </div>
+    </footer>
 
-  <script>
-    // Add event listener to the delete button
-    document.getElementById("deleteBtn").addEventListener("click", function () {
-        if (confirm("Are you sure you want to delete this item?")) {
-            // If confirmed, submit the form with a hidden input for delete action
-            var form = document.getElementById("updateForm");
-            var deleteInput = document.createElement("input");
-            deleteInput.setAttribute("type", "hidden");
-            deleteInput.setAttribute("name", "action");
-            deleteInput.setAttribute("value", "delete");
-            form.appendChild(deleteInput);
-            form.submit();
-        }
-    });
-
-    // Add event listener to check if any input field has been modified
-    document.getElementById("updateForm").addEventListener("submit", function (event) {
-        var inputs = document.querySelectorAll('input[type="text"]');
-        var formChanged = false;
-
-        inputs.forEach(function (input) {
-            if (input.value !== input.defaultValue) {
-                formChanged = true;
+    <script>
+        // Add event listener to the delete button
+        document.getElementById("deleteBtn").addEventListener("click", function () {
+            if (confirm("Are you sure you want to delete this item?")) {
+                // If confirmed, submit the form with a hidden input for delete action
+                var form = document.getElementById("updateForm");
+                var deleteInput = document.createElement("input");
+                deleteInput.setAttribute("type", "hidden");
+                deleteInput.setAttribute("name", "action");
+                deleteInput.setAttribute("value", "delete");
+                form.appendChild(deleteInput);
+                form.submit();
             }
         });
 
-        // If form hasn't changed, prevent submission and redirect
-        if (!formChanged) {
-            event.preventDefault();
-            window.location.href = "{{ url_for('update') }}";
-        }
-    });
-</script>
+        // Add event listener to the cancel button
+        document.getElementById("cancelBtn").addEventListener("click", function () {
+            // Redirect to the previous page or specific page
+            window.location.href = "{{ url_for('index') }}"; // Change 'index' to the appropriate endpoint
+        });
+
+        // Add event listener to check if any input field has been modified
+        document.getElementById("updateForm").addEventListener("submit", function (event) {
+            var inputs = document.querySelectorAll('input[type="text"]');
+            var formChanged = false;
+
+            inputs.forEach(function (input) {
+                if (input.value !== input.defaultValue) {
+                    formChanged = true;
+                }
+            });
+
+            // If form hasn't changed, prevent submission and redirect
+            if (!formChanged) {
+                event.preventDefault();
+                window.location.href = "{{ url_for('update') }}";
+            }
+        });
+    </script>
 
 </body>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
