--- a/Dormitory Services/templates/add-data.html
+++ b/Dormitory Services/templates/add-data.html
@@ -56,12 +56,9 @@
     <br>
     <br><br><br>
     <i class="bi bi-arrow-up-circle-fill" id="goToTopBtn" onclick="goToTop()"></i>
-    <footer class="footer mt-auto py-2 text-white">
-        <div class="container text-center">
-            <span class="text">All content © 2024 The Microservice, ECT-R21</span><br>
-            <span class="text">Dormitory Website, Max Mongkol Thailand 4, 20000 Dubrovnik</span>
-        </div>
-    </footer>
+    <footer class="footer text-white" style="height: 70px; line-height: 70px;">
+        <span class="text">All content © 2024 The Microservice, ECT-R21</span><br>
+      </footer>
 
     <script>
         document.getElementById("cancelBtn").addEventListener("click", function () {
