--- a/Dormitory Services/templates/other_page.html
+++ b/Dormitory Services/templates/other_page.html
@@ -18,26 +18,30 @@
     {% include 'navbar.html' %}
     <br><br><br><br>
     <div class="container d-flex justify-content-center align-items-center min-vh-100">
-        <div class="card" style="max-width: 600px;">
-            <img src="{{ item['imageUrl'] }}" class="card-img-top" alt="{{ item['name'] }}">
+        <div class="contentDTR"
+            style="background-color: transparent; backdrop-filter: 100px; color: white; padding: 20px; border-radius: 20px; border: 2px solid white;">
+            <img src="{{ item['imageUrl'] }}" class="card-img-top" style="width: 100%; height: 50%; border-radius: 20px;"
+                alt="{{ item['name'] }}">
             <div class="card-body">
                 <h3 class="card-title">{{ item['name'] }}</h3>
+                <br>
                 <p class="card-text">Description: {{ item['description'] }}</p>
                 <p class="card-text">Address: {{ item['address'] }}</p>
                 <p class="card-text">Monthly rent: {{ item['price'] }}</p>
                 <p class="card-text">Contact: {{ item['contact'] }}</p>
                 <p class="card-text">Available Room: {{ item['numberOfRoomsAvailable'] }}</p>
-                <a href="{{ url_for('index') }}" class="btn btn-primary">Back</a>
+                <div class="d-flex justify-content-center position-absolute w-100" style="bottom: 0;">
+                    <a href="{{ url_for('index') }}" class="btn btn-primary m-2">Back</a>
+                    <a href="{{ url_for('index') }}" class="btn btn-success m-2">Booking</a>
+                </div>
             </div>
         </div>
+
     </div>
     <br><br><br><br><br><br>
     <i class="bi bi-arrow-up-circle-fill" id="goToTopBtn" onclick="goToTop()"></i>
-    <footer class="footer py-2 text-white">
-        <div class="container text-center">
-            <span class="text">All content © 2024 The Microservice, ECT-R21</span><br>
-            <span class="text">Dormitory Website, Max Mongkol Thailand 4, 20000 Dubrovnik</span>
-        </div>
+    <footer class="footer text-white" style="height: 70px; line-height: 70px;">
+        <span class="text">All content © 2024 The Microservice, ECT-R21</span><br>
     </footer>
 </body>
 
