--- a/Dormitory Services/templates/update.html
+++ b/Dormitory Services/templates/update.html
@@ -22,24 +22,25 @@
         <h1>Update Items</h1>
         <div class="row">
             {% for item in items %}
-            <div class="col-md-4">
-                <div class="item mb-4 pb-4 border-bottom">
+            <div class="col-md-6 pb-4">
+                <div class="item" style="margin-top: 20px; margin-bottom: 20px; padding-top: 20px; padding-bottom: 20px;">
                     <h3>{{ item.name }}</h3>
                     <img src="{{ item.imageUrl }}" class="card-img-top" alt="{{ item.name }}">
                     <p>Price: {{ item.price }}</p>
                     <p>Address: {{ item.address }}</p>
                     <p>Description: {{ item.description }}</p>
                     <p>Contact: {{ item.contact }}</p>
-                    <!-- Add a form or button to initiate update for each item -->
                     <form action="{{ url_for('update_item', item_id=item._id) }}" method="get">
                         <button type="submit" class="btn btn-primary"><i class="bi bi-house-gear"></i>&nbsp;Update</button>
                     </form>
                 </div>
-            </div>            
+            </div>
+                      
             {% endfor %}
         </div>
+        <a style="text-align: center;" href="{{ url_for('index') }}" class="btn btn-primary">Back</a>
     </div>
-
+  
     <i class="bi bi-arrow-up-circle-fill" id="goToTopBtn" onclick="goToTop()"></i>
 
 </body>
