--- a/Dormitory Services/templates/index.html
+++ b/Dormitory Services/templates/index.html
@@ -2,83 +2,82 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DormitoryMain</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/static/css/style.css">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    crossorigin="anonymous"></script>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>DormitoryMain</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body>
-  <br>
-  {% include 'navbar.html' %}
-  <br>
-  <div class="banner-image w-100 vh-100 d-flex justify-content-center align-items-center">
-    <div class="content text-center">
-      <h1 class="text-white" id="popup-text">Welcome To Dormitory</h1>
+    <br>
+    {% include 'navbar.html' %}
+    <br>
+    <div class="banner-image w-100 vh-100 d-flex justify-content-center align-items-center">
+        <div class="content text-center">
+            <h1 class="text-white" id="popup-text">Welcome To Dormitory</h1>
+        </div>
     </div>
-  </div>
-  <br>
-  <div class="container">
-    <div class="d-flex justify-content-center">
-      <a href="{{ url_for('add_data_page') }}" class="btn btn-primary"><i class="bi bi-house-add"></i>&nbsp;Add Data</a>
-      <a href="{{ url_for('update') }}" class="btn btn-warning ml-3"><i class="bi bi-house-gear"></i>&nbsp;Update &
-        Delete</a>
+    <br>
+    <div class="container">
+        <div class="d-flex justify-content-center">
+            <a href="{{ url_for('add_data_page') }}" class="btn btn-primary"><i class="bi bi-house-add"></i>&nbsp;Add
+                Data</a>
+            <a href="{{ url_for('update') }}" class="btn btn-warning ml-3"><i class="bi bi-house-gear"></i>&nbsp;Update
+                & Delete</a>
+        </div>
     </div>
-  </div>
 
-  <div id="itemCarousel" class="carousel slide" data-ride="carousel">
-    <div class="carousel-inner">
-      {% for item in items|batch(3) %}
-      <div class="carousel-item {% if loop.first %}active{% endif %}">
-        <div class="container">
-          <div class="row">
-            {% for sub_item in item %}
-            <div class="col-md-4 mb-5">
-              <div class="card" style="background-color: transparent;backdrop-filter: blur(100px);color: white;">
-                <img src="{{ sub_item.imageUrl }}" class="card-img-top" alt="{{ sub_item.name }}">
-                <div class="card-body">
-                  <h3 class="card-title">{{ sub_item.name }}</h3>
-                  <p class="card-text">Address: {{ sub_item.address }}</p>
-                  <p class="card-text">Monthly rent: {{ sub_item.price }}</p>
-                  <p class="card-text">Available Now: {{ sub_item.numberOfRoomsAvailable }} / {{
-                    sub_item.numberOfRoomsAvailable }}</p>
-                  <a href="{{ url_for('other_page', item_id=sub_item['_id']) }}" class="btn btn-primary">Details</a>
+    <div id="itemCarousel" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+            {% for item in items|batch(3) %}
+            <div class="carousel-item {% if loop.first %}active{% endif %}">
+                <div class="container">
+                    <div class="row">
+                        {% for sub_item in item %}
+                        <div class="col-md-4 mb-5">
+                            <div class="card" style="background-color: transparent;backdrop-filter: blur(100px);color: white;">
+                                <img src="{{ sub_item.imageUrl }}" class="card-img-top" alt="{{ sub_item.name }}">
+                                <div class="card-body">
+                                    <h3 class="card-title">{{ sub_item.name }}</h3>
+                                    <p class="card-text">Address: {{ sub_item.address }}</p>
+                                    <p class="card-text">Monthly rent: {{ sub_item.price }}</p>
+                                    <p class="card-text">Available Now: {{ sub_item.numberOfRoomsAvailable }} / {{
+                                        sub_item.numberOfRoomsAvailable }}</p>
+                                    <a href="{{ url_for('other_page', item_id=sub_item['_id']) }}"
+                                        class="btn btn-primary">Details</a>
+                                </div>
+                            </div>
+                        </div>
+                        {% endfor %}
+                    </div>
                 </div>
-              </div>
             </div>
             {% endfor %}
-          </div>
         </div>
-      </div>
-      {% endfor %}
+        <a class="carousel-control-prev" href="#itemCarousel" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#itemCarousel" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
     </div>
-    <a class="carousel-control-prev" href="#itemCarousel" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#itemCarousel" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
 
-  <i class="bi bi-arrow-up-circle-fill" id="goToTopBtn" onclick="goToTop()"></i>
-  <footer class="footer text-white" style="height: 70px; line-height: 70px;">
-    <span class="text">All content © 2024 The Microservice, ECT-R21</span><br>
-  </footer>
+    <i class="bi bi-arrow-up-circle-fill" id="goToTopBtn" onclick="goToTop()"></i>
+    <footer class="footer text-white" style="height: 70px; line-height: 70px;">
+        <span class="text">All content © 2024 The Microservice, ECT-R21</span><br>
+    </footer>
 
-  <!-- Bootstrap and custom scripts -->
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  <script src="/static/js/script.js"></script>
-  <script src="https://cdn.lordicon.com/lordicon.js"></script>
+    <!-- Bootstrap and custom scripts -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="/static/js/script.js"></script>
+    <script src="https://cdn.lordicon.com/lordicon.js"></script>
 </body>
 
 </html>
