--- a/Dormitory Services/templates/navbar.html
+++ b/Dormitory Services/templates/navbar.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Bootstrap 5 - Transparent Navbar</title>
-  <link rel="stylesheet" href="css/bootstrap.min.css" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.0/css/bootstrap.min.css" integrity="sha384-KyZXEAg3QhqLMpG8r+Knujsl5+z5G7D7QLUpZ2he8ODtSt+yoW+yIVwvqS+WJmPk" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <a href="https://lordicon.com/">Icons by Lordicon.com</a>
 </head>
@@ -37,7 +37,7 @@
     </div>
   </nav>
 
-  <script src="js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.0/js/bootstrap.bundle.min.js" integrity="sha384-FBzqoquaL1+rjWB6WxLl3h1vCYsZUA6J3LrnfoocjEz3eQuXhc/54yJFZCkz8HbF" crossorigin="anonymous"></script>
 
 </body>
 
