--- a/Dormitory Services/templates/update.html
+++ b/Dormitory Services/templates/update.html
@@ -34,11 +34,12 @@
                         <button type="submit" class="btn btn-primary"><i class="bi bi-house-gear"></i>&nbsp;Update</button>
                     </form>
                 </div>
-            </div>
-                      
+            </div>          
             {% endfor %}
         </div>
-        <a style="text-align: center;" href="{{ url_for('index') }}" class="btn btn-primary">Back</a>
+        <div style="text-align: center;">
+            <a href="{{ url_for('index') }}" class="btn btn-primary">Back</a>
+        </div>
     </div>
   
     <i class="bi bi-arrow-up-circle-fill" id="goToTopBtn" onclick="goToTop()"></i>
